--- a/Home.mediawiki
+++ b/Home.mediawiki
@@ -5,7 +5,7 @@
 <!-- language en -->
 <!-- pragma section-numbers off -->
 = Simple DirectMedia Layer 1.3 Wiki =
-The Simple DirectMedia Layer Library (SDL) is designed to make it easy to write portable multimedia application that run on Linux, *BSD, MacOS, Win32 and BeOS. By presenting a single source code level API to your application, SDL enables access to the various native high-performance media interfaces for video, audio, etc.
+The Simple !DirectMedia Layer Library (SDL) is designed to make it easy to write portable multimedia application that run on Linux, *BSD, MacOS, Win32 and BeOS. By presenting a single source code level API to your application, SDL enables access to the various native high-performance media interfaces for video, audio, etc.
 
 Interesting starting points:
 
