--- a/Home.mediawiki
+++ b/Home.mediawiki
@@ -14,11 +14,11 @@ This wiki is your portal to documentation and other resources for SDL 1.3.
 Use the links under the '''Navigation Links''' heading on the left-hand menu to access:
 
 * API reference
-* tutorials
-* articles
-* books
-* FAQs
-* forums
+* [[Tutorials|tutorials]]
+* [[Articles|articles]]
+* [[Books|books]]
+* [[FAQs]]
+* [[Forums|forums]]
 
 Registered users can use the '''Edit''' links under the '''Page Actions''' heading on the left-hand menu to add or update content in the wiki. For help using the editing functions see the [[HelpOnEditing|MoinMoin Wiki Help]] pages, also available at any time from the Wiki Help link under the '''Navigation Links''' heading.
 
