--- a/Tutorials.mediawiki
+++ b/Tutorials.mediawiki
@@ -6,37 +6,37 @@ There are a number of SDL tutorials available from different sources.
 [list 1.3 tutorials here]
 
 == SDL 1.2 ==
-* [http://www.sdltutorials.com/ SDLTutorials.com]
+* [http://www.sdltutorials.com/ SDLTutorials.com|target="_blank"]
 : Wow! A whole website about SDL tutorials, including SDL basics, events, animation, entities, maps and other topics
-* [http://www.brighthub.com/hubfolio/matthew-casperson/blog/archive/2009/07/02/sdl-competition-here-i-come.aspx Matthew Casperson's SDL Tutorials]
+* [http://www.brighthub.com/hubfolio/matthew-casperson/blog/archive/2009/07/02/sdl-competition-here-i-come.aspx Matthew Casperson's SDL Tutorials|target="_blank"]
 : SDL tutorials on a variety of topics for shoot 'em up games
-* [http://gpwiki.org/index.php/Category:All_SDL_articles The Game Programming Wiki: SDL Tutorials]
+* [http://gpwiki.org/index.php/Category:All_SDL_articles The Game Programming Wiki: SDL Tutorials|target="_blank"]
 : A large number of SDL tutorials covering a variety of different topics
-* [http://www.gamedev.net/reference/articles/article2249.asp Direct3D 9.0 with SDL]
+* [http://www.gamedev.net/reference/articles/article2249.asp Direct3D 9.0 with SDL|target="_blank"]
 : Using SDL with Direct3D for graphics
-* [http://www.meandmark.com/sdlopenglpart1.html SDL and OpenGL]
+* [http://www.meandmark.com/sdlopenglpart1.html SDL and OpenGL|target="_blank"]
 : Using SDL and OpenGL on Mac OS X
-* [http://lazyfoo.net/SDL_tutorials/index.php Beginning Game Programming]
+* [http://lazyfoo.net/SDL_tutorials/index.php Beginning Game Programming|target="_blank"]
 : A series of tutorials on game concepts geared for SDL developers
-* [http://osdl.sourceforge.net/main/documentation/rendering/SDL-audio.html SDL Corner - Audio with SDL]
+* [http://osdl.sourceforge.net/main/documentation/rendering/SDL-audio.html SDL Corner - Audio with SDL|target="_blank"]
 : Lots of advanced information on using SDL's audio support
-* [http://osdl.sourceforge.net/main/documentation/rendering/SDL-openGL.html SDL Corner - Using OpenGL with SDL]
+* [http://osdl.sourceforge.net/main/documentation/rendering/SDL-openGL.html SDL Corner - Using OpenGL with SDL|target="_blank"]
 : Lots of advanced information on using SDL with OpenGL
-* [http://sol.gfxile.net/gp/ Sol's Graphics for Beginners]
+* [http://sol.gfxile.net/gp/ Sol's Graphics for Beginners|target="_blank"]
 : Setting up SDL with Visual C++ 6.0, basic graphics programming
-* [http://pgdc.purdue.org/sdltutorial/sdl_setup.html SDL Setup Guide 1.1]
+* [http://pgdc.purdue.org/sdltutorial/sdl_setup.html SDL Setup Guide 1.1|target="_blank"]
 : Setting up an SDL project with Visual Studio .NET
-* [http://de.wikibooks.org/wiki/SDL Tutorial / Einsteigerkurs in das Programmieren mit der SDL in C]
+* [http://de.wikibooks.org/wiki/SDL Tutorial / Einsteigerkurs in das Programmieren mit der SDL in C|target="_blank"]
 : The basics of using various features of SDL, in German
-* [http://pygame.org/docs/tut/MoveIt.html Help! How Do I Move An Image?]
+* [http://pygame.org/docs/tut/MoveIt.html Help! How Do I Move An Image?|target="_blank"]
 : Using Pygame to move images around in a simple game
-* [http://www.pro-linux.de/work/sdl/ SDL - Grundlagen und Grafik]
+* [http://www.pro-linux.de/work/sdl/ SDL - Grundlagen und Grafik|target="_blank"]
 : A German tutorial on SDL basics and graphics
-* [http://dungeonmaker.sourceforge.net/manual/tutorial1_1.html How I Rendered the Dungeons on SDL]
+* [http://dungeonmaker.sourceforge.net/manual/tutorial1_1.html How I Rendered the Dungeons on SDL|target="_blank"]
 : Exploring the code used to render 2D mazes in DungeonMaker
-* [http://cone3d.gamedev.net/cgi-bin/index.pl?page=tutorials/ogladv/index OpenGL Tutorials (by Marius)]
+* [http://cone3d.gamedev.net/cgi-bin/index.pl?page=tutorials/ogladv/index OpenGL Tutorials (by Marius)|target="_blank"]
 : Setting up SDL and OpenGL, Quake 2 models, OpenGL graphics topics
-* [http://cone3d.gamedev.net/cgi-bin/index.pl?page=tutorials/gfxsdl/index GFX with SDL (by Marius)]
+* [http://cone3d.gamedev.net/cgi-bin/index.pl?page=tutorials/gfxsdl/index GFX with SDL (by Marius)|target="_blank"]
 : A very nice set of tutorials covering using SDL with Dev-C++, 2D graphics and sound
-* [http://kekkai.org/roger/sdl/ Roger's SDL Tutorials]
+* [http://kekkai.org/roger/sdl/ Roger's SDL Tutorials|target="_blank"]
 : SDL_mixer, SDL_RWops
