--- a/Articles.mediawiki
+++ b/Articles.mediawiki
@@ -9,7 +9,7 @@
 * Free Software Magazine - May 2006
 : [http://www.freesoftwaremagazine.com/articles/linux_pdas The GP2x PDA]
 * Ask Slashdot - April 2004
-: [http://slashdot.org/askslashdot/01/04/03/1747256.shtml Game Programming w/ the Simple Direcmedia Layer?]
+: [http://slashdot.org/askslashdot/01/04/03/1747256.shtml Game Programming w/ the Simple Directmedia Layer?]
 * O'Reilly Network - October 2003
 : [http://linuxdevcenter.com/pub/a/linux/2003/10/23/sdl_anim.html Animation in SDL: OpenGL]
 * O'Reilly Network - August 2003
