--- a/Home.mediawiki
+++ b/Home.mediawiki
@@ -18,13 +18,27 @@ Use the links under the '''Navigation Links''' heading on the left-hand menu to 
 * [[Articles|articles]]
 * [[Books|books]]
 * [[FAQs]]
-* [http://forums.libsdl.org/ forums|target="blank"]
+* [http://forums.libsdl.org/ forums]
 
 Registered users can use the '''Edit''' links under the '''Page Actions''' heading on the left-hand menu to add or update content in the wiki. For help using the editing functions see the [[HelpOnEditing|MoinMoin Wiki Help]] pages, also available at any time from the Wiki Help link under the '''Navigation Links''' heading.
 
 == Introduction to SDL ==
 === What is SDL? ===
-SDL is a free cross-platform multi-media development         API, used for games, game SDK's, emulators, MPEG players and other applcations.
+The Simple DirectMedia Layer library (SDL) is a general API that provides low level access to audio, keyboard, mouse, joystick, 3D hardware via OpenGL, and 2D framebuffer across multiple platforms.
+
+The current version (1.3) supports Linux, Windows, Windows CE, BeOS, MacOS, Mac OS X, FreeBSD, NetBSD, OpenBSD, BSD/OS, Solaris, IRIX, and QNX. The code contains support for AIX, OSF/Tru64, RISC OS, and SymbianOS, but these are not officially supported.
+
+SDL is written in C, but works with C++ natively, and has bindings to several other languages, including Ada, C#, Eiffel, Erlang, Euphoria, Guile, Haskell, Java, Lisp, Lua, ML, Objective C, Pascal, Perl, PHP, Pike, Pliant, Python, Ruby, and Smalltalk.
+
+This library is distributed under GNU LGPL version 2, which can be found in the file "COPYING". This license allows you to use SDL freely in commercial programs as long as you link with the dynamic library.
+
+The best way to learn how to use SDL is to check out the header files in the "include" subdirectory and the programs in the "test" subdirectory. The header files and test programs are well commented and always up to date. More documentation is available in HTML format in "docs/index.html", and a documentation wiki is available online at: http://www.libsdl.org/cgi/docwiki.cgi
+
+The test programs in the "test" subdirectory are in the public domain.
+
+Frequently asked questions are answered online: http://www.libsdl.org/faq.php
+
+If you need help with the library, or just want to discuss SDL related issues, you can join the developers mailing list: http://www.libsdl.org/mailing-list.php
 
 === What can SDL do? ===
 '''''Video'''''
