--- a/Home.mediawiki
+++ b/Home.mediawiki
@@ -3,7 +3,7 @@
 <!-- #master-page:FrontPage -->
 <!-- format wiki -->
 <!-- language en -->
-<!-- pragma section-numbers off -->
+<!-- pragma section-numbers 2 -->
 <!-- acl Lauren MacDonell:read,write Sam Lantinga:read,write All:read -->
 = Simple DirectMedia Layer 1.3 Wiki =
 This wiki is your portal to documentation and other resources for SDL 1.3.
@@ -33,17 +33,17 @@ SDL is written in C, but works with C++ natively, and has bindings to several ot
 This library is distributed under GNU LGPL [<- link to licensing info] version 2. This license allows you to use SDL freely in commercial programs as long as you link with the dynamic library. A full commercial license for SDL 1.3 is available from [http://www.galaxygameworks.com Galaxy Gameworks].
 
 === What can SDL do? ===
-'''''Video'''''
+''''' Video'''''
 
-* Set a video mode at any depth (8-bpp or greater)                 with optional conversion, if the video mode is                 not supported by the hardware.
-* Write directly to a linear graphics framebuffer.
-* Create surfaces with colorkey or alpha blending                 attributes.
-* Surface blits are automatically converted to the                 target format using optimized blitters and are                 hardware accelerated, when possible. MMX                 optimized blits are available for the x86.
-* Hardware accelerated blit and fill operations are                 used if supported by the hardware.
+* Set a video mode at any depth (8-bpp or greater)                 with optional conversion, if the video mode is                 not supported by the hardware
+* Write directly to a linear graphics framebuffer
+* Create surfaces with colorkey or alpha blending                 attributes
+* Surface blits are automatically converted to the                 target format using optimized blitters and are                 hardware accelerated, when possible. MMX                 optimized blits are available for the x86
+* Hardware accelerated blit and fill operations are                 used if supported by the hardware
 * Window Management
 * Rendering
 
-'''''Input'''''
+''''' Input'''''
 
 * Events provided for:
 * Application visibility changes
@@ -51,21 +51,24 @@ This library is distributed under GNU LGPL [<- link to licensing info] version 2
 * Mouse input
 * Joystick input
 * User-requested quit
-* Each event can be enabled or disabled with                 SDL_EventState().
-* Events are passed through a user-specified filter                 function before being posted to the internal                 event queue.
-* Thread-safe event queue.
+* Each event can be enabled or disabled with                 SDL_EventState()
+* Events are passed through a user-specified filter                 function before being posted to the internal                 event queue
+* Thread-safe event queue
 
-'''''Force Feedback'''''
+''''' Force Feedback'''''
 
-* Force feedback is supported under Windows, Mac OSX and Linux.
+* Force feedback is supported under Windows, Mac OSX and Linux
 
 '''''Audio'''''
 
-* Set audio playback of 8-bit and 16-bit audio,                 mono or stereo, with optional conversion if the                 format is not supported by the hardware.
-* Audio runs independently in a separate thread,                 filled via a user callback mechanism.
-* Designed for custom software audio mixers, but                 the example archive contains a complete                 audio/music output library.
+* Set audio playback of 8-bit and 16-bit audio,                 mono or stereo, with optional conversion if the                 format is not supported by the hardware
+* Audio runs independently in a separate thread,                 filled via a user callback mechanism
+* Designed for custom software audio mixers, but                 the example archive contains a complete                 audio/music output library
 
 '''''File I/O Abstraction'''''
+
+* General purpose abstraction for opening, reading and writing data
+* Built-in support for files and memory
 
 '''''Shared Object Support'''''
 
@@ -85,6 +88,8 @@ This library is distributed under GNU LGPL [<- link to licensing info] version 2
 
 '''''CPU Feature Detection'''''
 
+* Detect MMX, SSE, 3DNow and AltiVec CPU features
+
 '''''Power Management'''''
 
 * Querying power management status
@@ -98,45 +103,26 @@ This library is distributed under GNU LGPL [<- link to licensing info] version 2
 === What platforms does SDL run on? ===
 '''''Windows'''''
 
-* Two versions, one safe for all systems based on                 Win32 APIs, and one with higher performance,                 based on DirectX APIs.
-* Safe version uses GDI for video display. High                 performance version uses !Direct3D for video                 display, taking advantage of modern hardware                 acceleration.
-* Safe version uses waveOut APIs for sound. High                 performance version uses !DirectSound for audio                 playback.
+* Two versions, one safe for all systems based on                 Win32 APIs, and one with higher performance,                 based on DirectX APIs
+* Safe version uses GDI for video display. High                 performance version uses !Direct3D for video                 display, taking advantage of modern hardware                 acceleration
+* Safe version uses waveOut APIs for sound. High                 performance version uses !DirectSound for audio                 playback
 
 '''''Mac OSX'''''
 
-* Uses Cocoa for video display, taking advantage of OpenGL for hardware acceleration.
-* Uses Core Audio for sound.
+* Uses Cocoa for video display, taking advantage of OpenGL for hardware acceleration
+* Uses Core Audio for sound
 
 '''''Linux'''''
 
-* Uses X11 for video display, taking advantage of OpenGL for hardware acceleration.
-* Uses the ALSA, OSS, !PulseAudio APIs for sound.
+* Uses X11 for video display, taking advantage of OpenGL for hardware acceleration
+* Uses the ALSA, OSS and !PulseAudio APIs for sound
 
-=== Special features in SDL 1.3 ===
+== Special features in SDL 1.3 ==
 * Full 3D hardware acceleration
-* Support for OpenGL 3.0
+* Support for OpenGL 3.0+
 * Support for multiple windows
 * Support for multiple displays
 * Support for multiple mice, tablets, etc.
 * Force Feedback available on Windows, Mac OS X and Linux
-
-Interesting starting points:
-
-* RecentChanges: see where people are currently working
-* WikiSandBox: feel free to change this page and experiment with editing
-* FindPage: search or browse the database in various ways
-* HelpOnMoinWikiSyntax: quick access to wiki markup
-* SiteNavigation: get an overview over this site and what it contains
-
-== How to use this site ==
-A Wiki is a collaborative site, anyone can contribute and share:
-
-* Edit any page by pressing '''<<GetText(Edit)>>''' at the top or the bottom of the page
-* Create a link to another page with joined capitalized words (like WikiSandBox) or with ```[[words in brackets]]```
-* Search for page titles or text within pages using the search box at the top of any page
-* See HelpForBeginners to get you going, HelpContents for all help pages.
-* For customizing MoinMoin's language support see HelpOnLanguages.
-
-To learn more about what a WikiWikiWeb is, read about MoinMoin:WhyWikiWorks and the MoinMoin:WikiNature. Also, consult the HelpMiscellaneous/FrequentlyAskedQuestions page.
 
 This wiki is powered by [http://moinmo.in/ MoinMoin].
