--- a/SDL_Init.mediawiki
+++ b/SDL_Init.mediawiki
@@ -150,3 +150,4 @@ Note that the event system is actually started by the video subsystem, so using 
 
 ----
 [[CategoryAPI]]
+[[CategoryAPIInitialization]]
