--- a/SDLFunctionTemplate.mediawiki
+++ b/SDLFunctionTemplate.mediawiki
@@ -1,3 +1,4 @@
+<!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
 
 = SDL_FunctionName =
@@ -6,7 +7,7 @@ Use this function to /insert short function description here/.
 
 
 == Syntax ==
-```python
+```c++
 /copy function syntax from header file/
 ```
 == Function Parameters ==
