--- a/FAQGeneral.mediawiki
+++ b/FAQGeneral.mediawiki
@@ -4,9 +4,9 @@
 == What is Simple DirectMedia Layer? ==
 Very simply, Simple DirectMedia Layer, or SDL for short, is a library that allows you low level access to a video framebuffer, audio output, mouse, keyboard, and joysticks across a wide variety of operating systems. 
 
-== What platforms are supported? == The current version supports Linux, Windows, BeOS, MacOS, MacOS X, FreeBSD, OpenBSD, BSD/OS, Solaris, IRIX, and QNX.
-
-The code contains support for Windows CE, AmigaOS, Dreamcast, Atari, NetBSD, AIX, OSF/Tru64, RISC OS, and SymbianOS, but these are not yet officially supported.
+== What platforms are supported? ==
+The current version supports Linux, Windows, MacOS X, FreeBSD, OpenBSD, BSD/OS, Solaris, and QNX.
+SDL 1.3 includes code for other operating systems but they are not officially supported.
 
 == What is the latest version? ==
 The latest stable version is 1.2 You can always get the very latest bleeding edge Subversion snapshot, which may be broken at any given time, from the Subversion page.
