--- a/SDL_AllocPalette.mediawiki
+++ b/SDL_AllocPalette.mediawiki
@@ -1,9 +1,8 @@
-<!-- pragma section-numbers 2 -->
+<!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
 = SDL_AllocPalette =
 Use this function to create a palette structure with the specified number of color entries.
 
-<<TableOfContents(3)>>
 
 == Syntax ==
 ```python
