--- a/SDL_BuildAudioCVT.mediawiki
+++ b/SDL_BuildAudioCVT.mediawiki
@@ -8,7 +8,7 @@ Use this function to initialize a SDL_AudioCVT structure for conversion.
 
 == Syntax ==
 ```c++
-int SDL_BuildAudioCVT (SDL_AudioCVT    *cvt, 
+int SDL_BuildAudioCVT (SDL_AudioCVT*   cvt, 
                        SDL_AudioFormat src_format, 
                        Uint8           src_channels, 
                        int             src_rate, 
@@ -19,7 +19,7 @@ int SDL_BuildAudioCVT (SDL_AudioCVT    *cvt,
 == Function Parameters ==
 {|
 |'''cvt'''
-|The pointer to an SDL_AudioCVT structure that is filled in with audio conversion information.
+|A pointer to an SDL_AudioCVT structure that is filled in with audio conversion information.
 |-
 |'''src_format'''
 |The source and destination format of the conversion
