--- a/SDL_BuildAudioCVT.mediawiki
+++ b/SDL_BuildAudioCVT.mediawiki
@@ -19,10 +19,10 @@ int SDL_BuildAudioCVT (SDL_AudioCVT*   cvt,
 == Function Parameters ==
 {|
 |'''cvt'''
-|A pointer to an [SDL_AudioCVT] structure that is filled in with audio conversion information
+|A pointer to an [[SDL_AudioCVT]] structure that is filled in with audio conversion information
 |-
 |'''src_format'''
-|The source format of the audio data; for more info see [SDL_AudioFormat]
+|The source format of the audio data; for more info see [[SDL_AudioFormat]]
 |-
 |'''src_channels'''
 |The number of channels in the source
